# VoxtralTTS-ComfyUI

./: .gitignore  README.md  __init__.py  node_list.json  pyproject.toml  requirements.txt
examples/: Voxtral TTS.json
model/: __init__.py  acoustic_transformer.py  codec_decoder.py  codec_encoder.py  config.py  inference.py  mistral_lm.py
nodes/: __init__.py  free_memory_node.py  load_text_node.py  voxtral_clone_node.py  voxtral_tts_node.py
