[project]
name = "Voxtral-ComfyUI"
version = "0.1.0"
description = "ComfyUI custom node for Mistral Voxtral-4B TTS. Local inference from safetensors weights."
license = {text = "Apache-2.0"}
dependencies = [
    "torch>=2.0.0",
    "safetensors>=0.4.0",
    "mistral_common>=1.10.0",
    "numpy>=1.20.0",
    "soundfile>=0.12.0",
    "huggingface_hub>=0.20.0",
]

[project.urls]
Repository = "https://github.com/placeholder/Voxtral-ComfyUI"

[tool.comfy]
PublisherId = "voxtral"
DisplayName = "Voxtral TTS ComfyUI"
Icon = ""
includes = []
